--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"cd client && npm start\""
+    "dev": "concurrently \"npm run server\" \"cd client && npm start\"",
+    "test": "mocha --recursive --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
+    "mocha": "^8.0.1",
+    "mockgoose": "^8.0.4",
     "mongoose": "^5.9.18",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
