--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "client-install": "cd client && npm install",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"cd client && npm start\"",
     "test": "mocha --recursive --exit"
